--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>tinDog</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu:wght@300&display=swap"
-  rel="stylesheet">      rel="stylesheet">
+  rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,8 +20,8 @@
   <section id="title">
     <div class="container-fluid">      
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
+      <nav class="navbar navbar-expand-lg navbar-dark" style="">
+        <a class="navbar-brand heading" href="">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,8 @@
           <li class="nav-item">
             <a class="nav-link" href="">Contact</a>
           </li>
-      <li class="nav-item">
+      <li class="nav-item" style="padding-right: 20px;
+    padding-left: 20px;">
         <a class="nav-link" href="">Pricing</a>
       </li>
       <li class="nav-item">
@@ -50,7 +52,7 @@
     <button type="button" class="btn btn-dark"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light"><i class="fab fa-google-play"></i> Download</button>
   </div>
-  <div class="col-lg-6">
+  <div class="col-lg-6 rotated">
     <img src="images/iphone6.png" alt="iphone-mockup">
   </div>
 </div>
