--- a/index.html
+++ b/index.html
@@ -62,18 +62,24 @@
         </nav>
 
         <!-- Title -->
-        <div class="row forborder">
-          <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark">
-              <i class="fab fa-apple"></i> Download
-            </button>
-            <button type="button" class="btn btn-outline-light">
-              <i class="fab fa-google-play"></i> Download
-            </button>
-          </div>
-          <div class="col-lg-6 rotated">
-            <img src="images/iphone6.png" alt="iphone-mockup" />
+        <div class="row">
+          <div class="forborder">
+            <div class="coloumnn" class="col-lg-6">
+              <h1>Meet new and interesting dogs nearby.</h1>
+              <button type="button" class="btn btn-dark">
+                <i class="fab fa-apple"></i> Download
+              </button>
+              <button type="button" class="btn btn-outline-light">
+                <i class="fab fa-google-play"></i> Download
+              </button>
+            </div>
+            <div class="coloumnn" class="col-lg-6">
+              <img
+                class="title-image"
+                src="images/iphone6.png"
+                alt="iphone-mockup"
+              />
+            </div>
           </div>
         </div>
       </div>
